--- a/ex1/STMCUBE/Debug/makefile
+++ b/ex1/STMCUBE/Debug/makefile
@@ -64,8 +64,8 @@ all: main-build
 main-build: ex1.elf secondary-outputs
 
 # Tool invocations
-ex1.elf: $(OBJS) $(USER_OBJS) D:\MCU\lab\lab1_offical_local\ex1\STMCUBE\STM32F103C6TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "ex1.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"D:\MCU\lab\lab1_offical_local\ex1\STMCUBE\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ex1.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+ex1.elf: $(OBJS) $(USER_OBJS) C:\Users\Tinh\STM32CubeIDE\workspace_1.7.0\GIT_LAB1\MCU_LAB1\ex1\STMCUBE\STM32F103C6TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "ex1.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\Tinh\STM32CubeIDE\workspace_1.7.0\GIT_LAB1\MCU_LAB1\ex1\STMCUBE\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ex1.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
